--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ body{
 .container{
     display: grid;
     margin: 50px 75px;
+    align-items: center;
 }
 
 /* Navigation menu start */
@@ -32,6 +33,7 @@ nav{
     display: flex;
     height: 25px;
     align-items: center;
+    justify-content: space-between;
 }
 .nav-logo-text a{
     color: var(--text-color);
@@ -100,6 +102,7 @@ button.primary-btn.influencer-btn{
     border-bottom: 1px solid var(--btn-bg-color);
     align-items: center;
 }
+
 /* Company logo section end */
 
 /* Popular Collection start */
@@ -162,6 +165,54 @@ color: #787885;
 /* Popular Collection End */
 
 
+
+
+
+/* Solution part start */
+
+
+h2.centered-text {
+    display: flex;
+    justify-content: center;
+    color: var(--text-color);
+    margin: 85px 0 20px 0;
+}
+.solutions{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3%;
+}
+.single-solution{
+    display: flex;
+    flex-direction: column;
+}
+
+.solution-image img{
+    width: 100%;
+}
+
+.single-solution a{
+    text-decoration: none;
+    color: var(--product-heading-color);
+}
+
+.solution-short-para{
+    color: var(--text-color);
+    font-weight: 400;
+    font-size: 14px;
+    margin: 10px 0;
+}
+
+.anchor-of-solution-short{
+    color: var(--btn-bg-color);
+}
+
+span.solution-span:hover {
+    text-decoration: underline;
+}
+
+
+/* Solution part end */
 /* Footer section start */
 
 footer{
@@ -225,46 +276,61 @@ i.fab.fa-instagram {
     margin-top: 10px;
 }
 
-/* Solution part start */
+/* Footer section end */
 
 
-h2.centered-text {
+@media only screen and (max-width:688px) {
+
+    header{
+        display: none;
+    }
+    .influencer-section{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 5%;
+    }
+    
+
+    .influencer-right{
+    width: 50%;
     display: flex;
     justify-content: center;
-    color: var(--text-color);
-    margin: 85px 0 20px 0;
-}
-.solutions{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3%;
-}
-.single-solution{
-    display: flex;
-    flex-direction: column;
-}
+    align-items: center;
+    background: url(../images/Circle-design.svg) no-repeat;
+    background-position: center;
+    }
 
-.solution-image img{
-    width: 100%;
-}
+    .influencer-right img{
+        width: 90%;
+    }
 
-.single-solution a{
-    text-decoration: none;
-    color: var(--product-heading-color);
-}
+    .company-logos{
+        grid-template-columns: repeat(4, 1fr);
+    }
 
-.solution-short-para{
-    color: var(--text-color);
-    font-weight: 400;
-    font-size: 14px;
-    margin: 10px 0;
-}
+    .company-logos img{
+        width: 33.38px;
+        height: 18.84px;
+        margin: 10px 20px;
+    }
+    .products{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1% 0;
+    }
 
-.anchor-of-solution-short{
-    color: var(--btn-bg-color);
-}
 
-span.solution-span:hover {
-    text-decoration: underline;
+    .solutions{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .single-solution{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .h2.centered-text{
+        margin: 20px 10px;
+    }
+    .solution-section{
+        padding: 60px 0;
+    }
 }
-/* Footer section end */
